--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -336,6 +336,7 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
+  <app-photo-grid></app-photo-grid>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
