add all requirements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,8 +68,8 @@
 
   .content {
     display: flex;
-    margin: 82px auto 32px;
-    padding: 0 16px;
+    /* margin: 82px auto 32px;
+    padding: 0 16px; */
     max-width: 960px;
     flex-direction: column;
     align-items: center;
@@ -325,6 +325,10 @@
     </a>
 </div>
 
+<div class="photo">
+  <app-photo-grid></app-photo-grid>
+</div>
+
 <div class="content" role="main">
 
   <!-- Highlight Card -->
@@ -336,7 +340,9 @@
 
   <!-- Resources -->
   <h2>Resources</h2>
-  <app-photo-grid></app-photo-grid>
+  <!-- <div class="photo">
+    <app-photo-grid></app-photo-grid>
+  </div> -->
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
